import java.util.function.Predicate

description = "today-blog API"

apply plugin: "application"
apply plugin: 'infra.application'
apply plugin: 'cn.taketoday.blog.conventions'
apply plugin: 'cn.taketoday.blog.optional-dependencies'

//apply plugin: 'infra.application.aot'
//apply plugin: 'org.graalvm.buildtools.native'

dependencies {
  implementation 'cn.taketoday:infra-starter-application'
  implementation 'cn.taketoday:infra-starter-netty-server'
  implementation 'cn.taketoday:infra-starter-webmvc'
  implementation 'cn.taketoday:infra-starter-persistence'
  implementation 'cn.taketoday:infra-starter-json'
  implementation 'cn.taketoday:infra-starter-restclient'
  implementation 'cn.taketoday:infra-starter-http-service'
  implementation 'cn.taketoday:infra-starter-validation'
  implementation 'cn.taketoday:infra-starter-jdbc'
  implementation 'cn.taketoday:infra-starter-mail'
  implementation 'cn.taketoday:infra-starter-freemarker'
  implementation 'cn.taketoday:infra-starter-flyway'
  implementation 'cn.taketoday:infra-starter-logging'
  implementation 'org.flywaydb:flyway-mysql'

  implementation 'eu.bitwalker:UserAgentUtils:1.21'
  implementation 'com.mysql:mysql-connector-j'
  implementation 'cn.taketoday:ip2region-java:1.0-SNAPSHOT'
  
  implementation('com.aliyun.oss:aliyun-sdk-oss:3.18.4') {
    exclude group: "javax.xml.bind"
    exclude group: "jakarta.xml.bind"
    exclude group: "org.glassfish.jaxb"
  }


  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  implementation 'com.github.ben-manes.caffeine:caffeine'
//  implementation("io.netty:netty-transport-native-kqueue") {
//    artifact {
//      classifier = 'osx-aarch_64'
//    }
//  }
//
//  implementation('io.netty:netty-transport-native-epoll') {
//    artifact {
//      classifier = 'linux-x86_64'
//    }
//  }

//  implementation "cn.taketoday:infra-core-aot"

  annotationProcessor "cn.taketoday:infra-configuration-processor"
  annotationProcessor "cn.taketoday:infra-annotation-config-processor"

  testImplementation 'cn.taketoday:infra-starter-test'
  testImplementation 'cn.taketoday:infra-starter-webmvc-test'
  testImplementation 'cn.taketoday:infra-mariadb4j'

  testImplementation 'org.projectlombok:lombok'
  testAnnotationProcessor("org.projectlombok:lombok")

}

compileJava {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21

}

application {
  applicationDefaultJvmArgs = [
      "-server",
      "--add-opens=java.base/java.nio=ALL-UNNAMED",
      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
//      "-Dinfra.profiles.active=prod",
      "--enable-native-access=ALL-UNNAMED",
      "-Dio.netty.leakDetection.level=disabled",
      "-Xms512M",
      "-Xmx512M"
  ]
}

infraJar {
  layered {
    includeLayerTools = false
  }
}

infraApplication {
  buildInfo {

  }
}


test {
  useJUnitPlatform()

}

distributions {
  main {
    contents {
      from("src/main/bin") {
        into 'bin'
        filePermissions {
          unix("rwxr-xr-x")
        }
      }
    }
  }
}

//graalvmNative {
//  binaries {
//    main {
//      imageName = 'application'
//      mainClass = 'org.test.Main'
//      debug = true
//      verbose = true
//      fallback = true
//      sharedLibrary = false
//      quickBuild = false
//      richOutput = false
//
//      systemProperties = [name1: 'value1', name2: 'value2']
//      configurationFileDirectories.from(file('src/my-config'))
//      excludeConfig.put("org.example.test:artifact:version", ["^/META-INF/native-image/.*", "^/config/.*"])
//      excludeConfig.put(file("path/to/artifact.jar"), List.of("^/META-INF/native-image/.*", "^/config/.*"))
//
//      // Advanced options
//      buildArgs.add('--link-at-build-time')
//      jvmArgs.add('flag')
//
//      // Runtime options
//      runtimeArgs.add('--help')
//
//      useFatJar = true
//    }
//  }
//
//  agent {
//    defaultMode = "standard"
//    enabled = true
//
//    modes {
//      standard {
//      }
//      conditional {
//        userCodeFilterPath = "path-to-filter.json"
//        extraFilterPath = "path-to-another-filter.json" // Optional
//      }
//      direct {
//        options.add("config-output-dir={output_dir}")
//        options.add("experimental-configuration-with-origins")
//      }
//    }
//
//    callerFilterFiles.from("filter.json")
//    accessFilterFiles.from("filter.json")
//    builtinCallerFilter = true
//    builtinHeuristicFilter = true
//    enableExperimentalPredefinedClasses = false
//    enableExperimentalUnsafeAllocationTracing = false
//    trackReflectionMetadata = true
//
//    metadataCopy {
//      inputTaskNames.add("test")
//      outputDirectories.add("META-INF/native-image/<groupId>/<artifactId>/")
//      mergeWithExisting = true
//    }
//
//    tasksToInstrumentPredicate = new Predicate<Task>() {
//
//      @Override
//      boolean test(Task task) {
//        return true
//      }
//    }
//
//  }
//}
